# andy-ui

./: CMakeLists.txt
examples/: minimal.cpp
include/andy/ui/: app.hpp  dialog.hpp  frame.hpp  frame_class.hpp  implmement_app.hpp  page.hpp  toplevel.hpp  window.hpp  xml_page.hpp
include/uva/ui/: app.hpp  dialog.hpp  frame.hpp  toplevel.hpp
src/: app.cpp  app_emscripten.cpp  app_impl.hpp  app_sdl3.cpp  frame.cpp  xml_page_emscripten.cpp  xml_page_sdl3.cpp
src/GTK3/: app.cpp  dialog.cpp  frame.cpp  implement_app.hpp  toplevel.cpp
src/WIN32/: app.cpp  dialog.cpp  frame.cpp  implement_app.hpp  toplevel.cpp
src/emscripten/: app.cpp
src/gtk3/: app.cpp
src/win32/: app.cpp
